# health-gen-ai-chat

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/commands/: commit.md
dbt_health_gen_ai_chat/: .gitignore  README.md  dbt_project.yml  profiles.yml
dbt_health_gen_ai_chat/models/: metrics_schema.yml  models_schema.yml  semantic_schema.yml  source_schema.yml  view_food_register.sql  view_glucose_register.sql  view_insulin_register.sql  view_strava_activities.sql
dbt_health_gen_ai_chat/models/example/: dummy_table.sql  metricflow_time_spine.sql  schema.yml  semantic_schema.yml  view_glucose_register.sql
docker/: Dockerfile  entrypoint.sh  wait_for_mysql.py
docs/: food-information.md  how-to-use.md  mcp-exec.md  mcp-semantic.md  mcp-visualization.md
health_gen_ai_chat/: dbt_project.yml
health_gen_ai_chat/models/example/: dummy.sql  glucose_register.sql  schema.yml
mcp_exec_health_gen_ai_chat/: main.py
mcp_semantic_healh_gen_ai_chat/: README.md  check_capabilities.py  main.py
src/: .env.example  README.md
src/chat_agent/: config.py  config.yaml  crud.py  database.py  index.html  main.py  models.py  schemas.py  server.py  streamlit_dashboard.py
src/mcp_exec_health_gen_ai_chat/: main.py
src/mcp_semantic_healh_gen_ai_chat/: main.py
src/mcp_visualization_health_gen_ai_chat/: main.py
tests/: README.md  conftest.py  test_dbt_semantic_coherence.py  test_mcp_exec_timezone.py  test_mcp_exec_validation.py  test_streamlit_dashboard.py  test_streamlit_live_glucose_dashboard.py  test_streamlit_server_e2e.py
trino-docker/: docker-compose.yml
trino-docker/catalog/: abbot.properties  strava.properties
