[project]
name = "health-gen-ai-chat"
version = "0.1.0"
description = "Configuración de dependencias y servidores MCP"
requires-python = ">=3.11, <3.12"
dependencies = [
    "dbt-mysql",
    "six",
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    "SQLAlchemy>=2.0.0",
    "PyMySQL>=1.1.0",
    "cryptography>=41.0.0",
    "anthropic>=0.40.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mcp_exec_health_gen_ai_chat",
    "src/mcp_semantic_healh_gen_ai_chat",
    "src/mcp_visualization_health_gen_ai_chat",
    "src/chat_agent"
]