[project]
name = "health-gen-ai-chat"
version = "0.1.0"
description = "LLM-powered health data chat using Claude, dbt, and MCP servers"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "dbt-mysql",
    "six",
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "PyMySQL>=1.1.0",
    "cryptography>=41.0.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "aiomysql>=0.2.0",
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mcp_exec_health_gen_ai_chat",
    "src/mcp_semantic_healh_gen_ai_chat",
    "src/mcp_visualization_health_gen_ai_chat",
    "src/chat_agent",
]

# ---------------------------------------------------------------------------
# uv settings
# ---------------------------------------------------------------------------
[tool.uv]

[tool.uv.sources]
# All packages come from PyPI — no local path or git overrides needed.
